[project]
name = "duecautils"
version = "0.9"
description = "Support modules for manipulating DUECA projects"
readme = "README.md"
requires-python = ">=3.6"
authors = [
  { name = 'René van Paassen', email = 'rene.vanpaassen@gmail.com' }
  ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: EUPL License",
    "Operating System :: OS Independent" ]

[license]
text = "EUPL 1.2"

[dependencies]
lxml = "^3.0.0"
git = "^2017.0.0"

[build-system]
requires = [
    "setuptools >= 44",
    "wheel"
]
build-backend = "setuptools.build_meta"
